objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Reference_Number__c</fullName>
        <description>Field that creates a reference number for each business</description>
        <displayFormat>AC{0000}</displayFormat>
        <label>Account Reference Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Reference__c</fullName>
        <description>The account reference number should show the legacy number if it exists or the new one generated by Salesforce</description>
        <formula>IF(ISBLANK(AccountNumber),  Account_Reference_Number__c ,  AccountNumber )</formula>
        <label>Account Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__All_Organisations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Organisations</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>arcuscrm__Business</fullName>
        <active>true</active>
        <description>A business that interacts with the council. Could be a sole trader or a larger company.</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>arcuscrm__Ward</fullName>
        <active>true</active>
        <description>While not strictly an “organisation” we have organisation records for each council ward. This allows cases of various types to be readily grouped by wards.</description>
        <label>Ward</label>
    </recordTypes>
    <validationRules>
        <fullName>Ward_Account</fullName>
        <active>true</active>
        <description>Prevent system ward accounts from being renamed or duplicates created</description>
        <errorConditionFormula>OR(
AND(
ISCHANGED(Name),
PRIORVALUE(Name) = 'Business - New'
),
AND(
ISNEW(),
Name = 'Business - New'
),
AND(
ISCHANGED(Name),
Name = 'Business - New'
),
AND(
ISCHANGED(Name),
PRIORVALUE(Name) = 'Resident - New'
),
AND(
ISNEW(),
Name = 'Resident - New'
),
AND(
ISCHANGED(Name),
Name = 'Resident - New'
),
AND(
ISCHANGED(Name),
PRIORVALUE(Name) = 'Resident - Non LLPG'
),
AND(
ISNEW(),
Name = 'Resident - Non LLPG'
),
AND(
ISCHANGED(Name),
Name = 'Resident - Non LLPG'
)
)</errorConditionFormula>
        <errorMessage>This account can't be modified/created. Please contact your administrator for more information.</errorMessage>
    </validationRules>
</CustomObject>